# image-toolbox

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/acquisitor/: acquisitor.hpp
include/manager/: panel.hpp  state.hpp  window.hpp
include/panels/: assets.hpp  image-preview.hpp  menubar.hpp  status-bar.hpp  tools.hpp
include/renderer/: image.hpp  processor.hpp
include/renderer/transformations/: color.hpp  enhance.hpp  geometric.hpp  point.hpp
include/services/: acquisitor.hpp
include/shared/: state.hpp  theme.hpp
src/acquisitor/: acquisitor.cpp
src/manager/: state.cpp  window.cpp
src/panels/: assets.cpp  image-preview.cpp  menubar.cpp  status-bar.cpp  tools.cpp
src/renderer/: image.cpp
src/renderer/transformations/: color.cpp  enhance.cpp  geometric.cpp  point.cpp
src/services/: acquisitor.cpp
src/shared/: state.cpp  theme.cpp
